fix: add ohos.permission.KEEP_BACKGROUND_RUNNING

--- a/entry/build-profile.json5
+++ b/entry/build-profile.json5
@@ -28,6 +28,10 @@
       "runtimeOS": "HarmonyOS"
     },
     {
+      "name": "release",
+      "runtimeOS": "HarmonyOS"
+    },
+    {
       "name": "ohosTest",
     }
   ]
