--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -34,6 +34,9 @@
         "name": "ohos.permission.GET_NETWORK_INFO"
       },
       {
+        "name": "ohos.permission.KEEP_BACKGROUND_RUNNING"
+      },
+      {
         "name": "ohos.permission.ACCESS_CERT_MANAGER"
       }
     ],
