--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -16,9 +16,9 @@
 {
   "app": {
     "bundleName": "com.im5v.vpn",
-    "vendor": "example",
-    "versionCode": 1000000,
-    "versionName": "1.0.0",
+    "vendor": "WuWei",
+    "versionCode": 1000001,
+    "versionName": "1.0.1",
     "icon": "$media:icon",
     "label": "$string:app_name"
   }
